--- a/Code.ipynb
+++ b/Code.ipynb
@@ -394,22 +394,16 @@
     "\n",
     "- <strong> y </strong> will be the result of the series of best of 7 (1 if he wins 4 games and 0 if less than 4)\n",
     "\n",
-    "- the data that will be used in this model is from the Stephen Curry career stats\n",
+    "- the data that will be used in this model is from the Stephen Curry career stats \n",
     "\n",
     "```Model 2```\n",
-    "- there are three parameters (α, β and θ)\n",
+    "- two parameters are added (α and β) so total of three parameters (α, β and θ)\n",
     "\n",
     "- <strong> α </strong> and <strong> β </strong> are the first and second arguments of θ's beta distribution\n",
     "\n",
     "- <strong> θ </strong> will be the chance of success (Stephen Curry winning one game)\n",
     "\n",
-    "- <strong> game </strong> will be the result of the game, win(1) or lose(0) using bernoulli distribution and θ will be the argument\n",
-    "\n",
-    "- <strong> series </strong> will be the games won out of 7 games using the binomial distribution\n",
-    "\n",
-    "- <strong> y </strong> will be the result of the series of best of 7 (1 if he wins 4 games and 0 if less than 4)\n",
-    "\n",
-    "- the data that will be used in this model is from the Stephen Curry career stats"
+    "- the rest is the same as model 1"
    ]
   },
   {
