--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,159 +204,185 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2009-2010</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Tue 4/6</td>\n",
-       "      <td>WSH</td>\n",
-       "      <td>L</td>\n",
-       "      <td>94</td>\n",
-       "      <td>112</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>10-21</td>\n",
-       "      <td>10</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Fri 5/21</td>\n",
+       "      <td>MEM</td>\n",
+       "      <td>L</td>\n",
+       "      <td>112</td>\n",
+       "      <td>117</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>13-28</td>\n",
+       "      <td>13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>1</td>\n",
        "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>39</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2009-2010</td>\n",
+       "      <th>917</th>\n",
+       "      <td>2020-2021</td>\n",
        "      <td>Regular</td>\n",
-       "      <td>Sun 4/4</td>\n",
-       "      <td>TOR</td>\n",
+       "      <td>Wed 5/19</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>L</td>\n",
+       "      <td>100</td>\n",
+       "      <td>103</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>12-23</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>87.5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Thu 12/17</td>\n",
+       "      <td>SAC</td>\n",
        "      <td>W</td>\n",
        "      <td>113</td>\n",
-       "      <td>112</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>10-23</td>\n",
-       "      <td>10</td>\n",
+       "      <td>105</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>9-23</td>\n",
+       "      <td>9</td>\n",
        "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>66.7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>29</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2009-2010</td>\n",
+       "      <th>919</th>\n",
+       "      <td>2020-2021</td>\n",
        "      <td>Regular</td>\n",
-       "      <td>Fri 4/2</td>\n",
-       "      <td>NYK</td>\n",
-       "      <td>W</td>\n",
-       "      <td>128</td>\n",
-       "      <td>117</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>7-21</td>\n",
-       "      <td>7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2009-2010</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Wed 3/31</td>\n",
-       "      <td>UTA</td>\n",
+       "      <td>Tue 12/15</td>\n",
+       "      <td>SAC</td>\n",
        "      <td>L</td>\n",
-       "      <td>104</td>\n",
-       "      <td>128</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>6-16</td>\n",
-       "      <td>6</td>\n",
+       "      <td>113</td>\n",
+       "      <td>114</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>11-21</td>\n",
+       "      <td>11</td>\n",
        "      <td>...</td>\n",
        "      <td>3</td>\n",
        "      <td>66.7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
        "      <td>4</td>\n",
-       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2009-2010</td>\n",
+       "      <th>920</th>\n",
+       "      <td>2020-2021</td>\n",
        "      <td>Regular</td>\n",
-       "      <td>Sun 3/28</td>\n",
-       "      <td>LAC</td>\n",
+       "      <td>Sat 12/12</td>\n",
+       "      <td>DEN</td>\n",
        "      <td>W</td>\n",
-       "      <td>121</td>\n",
-       "      <td>103</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>8-15</td>\n",
-       "      <td>8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>107</td>\n",
+       "      <td>105</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>3-10</td>\n",
        "      <td>3</td>\n",
-       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 28 columns</p>\n",
+       "<p>921 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Season_year Season_div      Date  OPP Result  T Score  O Score   MIN     FG  \\\n",
-       "0   2009-2010    Regular  Wed 4/14  POR      W      122      116  48.0  13-25   \n",
-       "1   2009-2010    Regular  Tue 4/13  UTA      L       94      103  41.0   5-15   \n",
-       "2   2009-2010    Regular  Sun 4/11  OKC      W      120      117  35.0   9-16   \n",
-       "3   2009-2010    Regular  Sat 4/10  LAC      L      104      107  41.0  10-19   \n",
-       "4   2009-2010    Regular   Wed 4/7  MIN      W      116      107  44.0  12-22   \n",
-       "5   2009-2010    Regular   Tue 4/6  WSH      L       94      112  33.0  10-21   \n",
-       "6   2009-2010    Regular   Sun 4/4  TOR      W      113      112  44.0  10-23   \n",
-       "7   2009-2010    Regular   Fri 4/2  NYK      W      128      117  29.0   7-21   \n",
-       "8   2009-2010    Regular  Wed 3/31  UTA      L      104      128  34.0   6-16   \n",
-       "9   2009-2010    Regular  Sun 3/28  LAC      W      121      103  40.0   8-15   \n",
+       "    Season_year Season_div       Date  OPP Result  T Score  O Score   MIN  \\\n",
+       "0     2009-2010    Regular   Wed 4/14  POR      W      122      116  48.0   \n",
+       "1     2009-2010    Regular   Tue 4/13  UTA      L       94      103  41.0   \n",
+       "2     2009-2010    Regular   Sun 4/11  OKC      W      120      117  35.0   \n",
+       "3     2009-2010    Regular   Sat 4/10  LAC      L      104      107  41.0   \n",
+       "4     2009-2010    Regular    Wed 4/7  MIN      W      116      107  44.0   \n",
+       "..          ...        ...        ...  ...    ...      ...      ...   ...   \n",
+       "916   2020-2021    Regular   Fri 5/21  MEM      L      112      117  47.0   \n",
+       "917   2020-2021    Regular   Wed 5/19  LAL      L      100      103  41.0   \n",
+       "918   2020-2021    Regular  Thu 12/17  SAC      W      113      105  29.0   \n",
+       "919   2020-2021    Regular  Tue 12/15  SAC      L      113      114  28.0   \n",
+       "920   2020-2021    Regular  Sat 12/12  DEN      W      107      105  21.0   \n",
        "\n",
-       "   FGM  ...  FTA    FT% REB  AST  BLK  STL PF  TO  PTS  Record  \n",
-       "0   13  ...   12  100.0   9    8    1    2  0   2   42       1  \n",
-       "1    5  ...    6  100.0   5    6    0    2  4   2   17       0  \n",
-       "2    9  ...    6   66.7   7    7    0    1  2   5   25       1  \n",
-       "3   10  ...    4  100.0   9    4    0    3  5   3   29       0  \n",
-       "4   12  ...    0    0.0   8   14    0    7  4   4   27       1  \n",
-       "5   10  ...    4  100.0   1    4    0    2  2   2   27       0  \n",
-       "6   10  ...    6   66.7   8   12    2    3  4   5   29       1  \n",
-       "7    7  ...    0    0.0   4   10    0    1  1   2   15       1  \n",
-       "8    6  ...    3   66.7   2    6    0    0  5   4   15       0  \n",
-       "9    8  ...    0    0.0   4    7    0    1  5   3   18       1  \n",
+       "        FG  FGM  ...  FTA    FT% REB  AST  BLK  STL PF  TO  PTS  Record  \n",
+       "0    13-25   13  ...   12  100.0   9    8    1    2  0   2   42       1  \n",
+       "1     5-15    5  ...    6  100.0   5    6    0    2  4   2   17       0  \n",
+       "2     9-16    9  ...    6   66.7   7    7    0    1  2   5   25       1  \n",
+       "3    10-19   10  ...    4  100.0   9    4    0    3  5   3   29       0  \n",
+       "4    12-22   12  ...    0    0.0   8   14    0    7  4   4   27       1  \n",
+       "..     ...  ...  ...  ...    ...  ..  ...  ...  ... ..  ..  ...     ...  \n",
+       "916  13-28   13  ...    7  100.0   4    5    0    3  5   7   39       0  \n",
+       "917  12-23   12  ...    8   87.5   7    3    0    0  2   6   37       0  \n",
+       "918   9-23    9  ...    5  100.0   6    3    0    2  2   1   29       1  \n",
+       "919  11-21   11  ...    3   66.7   4    4    1    3  0   4   29       0  \n",
+       "920   3-10    3  ...    2  100.0   1    3    0    2  1   3   10       1  \n",
        "\n",
-       "[10 rows x 28 columns]"
+       "[921 rows x 28 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +400,7 @@
     "        Curry_Career_Record.append(0)\n",
     "\n",
     "Curry_Career['Record'] = Curry_Career_Record\n",
-    "Curry_Career.head(10)"
+    "Curry_Career"
    ]
   },
   {
